docs(readme): update project setup and test credentials
- Document Oracle and backend setup
- Add frontend and dev tunnel instructions
- Add current test-user login credentials
- Document API features and troubleshooting